--- a/Styles.css
+++ b/Styles.css
@@ -1,6 +1,8 @@
+body{
+    background-color: rgb(232, 232, 232);
+}
 .container {
     max-width: 1600px;
-    margin: 10vh auto 0 auto;
     box-shadow: 0px 0px 43px 17px rgb(232, 232, 232);
 }
 
@@ -41,13 +43,14 @@
 }
 
 .button1:hover {
-    background-color: #323330;
+    background-color: #c6c7c5;
     color: white;
     transition: 0.5s ease-in-out;
 }
-.container1 {
+.container1{
     max-width: 1600px;
-    margin: 10vh auto 0 auto;
+    background-color: rgb(232, 232, 232);
+    
 }
 .pavadinimas{
     font-size: 45px;
